Fix: project items leaking off screen when below 300px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,8 +173,8 @@ a {
 .project:first-child {
     background-attachment: fixed;
     background-size: 100%;
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 280px;
+    min-height: 280px;
     flex-basis: 100%
 }
 
@@ -212,7 +212,10 @@ a {
         max-width: 100vw;
         max-height: 10vw;
         flex: 0 0 100%;
-        align-items: center;
+    }
+
+    nav > a {
+        padding-top: 10px;
     }
 
     .section-wrapper > h2 {
